      number we've gotten from accept() and socketpair().  This bug made us
      fail to count all sockets that we were using for incoming
      connections.  Bugfix on 0.2.0.x.
    - Fix code used to find strings within buffers, when those strings
      are not in the first chunk of the buffer.
    - Fix potential segfault when parsing HTTP headers. Bugfix on 0.2.0.x.

  o Minor features (performance):
    - Tune parameters for cell pool allocation to minimize amount of
      RAM overhead used.
    - Add OpenBSD malloc code from phk as an optional malloc
      replacement on Linux: some glibc libraries do very poorly
      with Tor's memory allocation patterns.  Pass
      --enable-openbsd-malloc to get the replacement malloc code.
    - Add a --with-tcmalloc option to the configure script to link
      against tcmalloc (if present).  Does not yet search for
      non-system include paths.
    - Stop imposing an arbitrary maximum on the number of file descriptors
      used for busy servers.  Bug reported by Olaf Selke; patch from
      Sebastian Hahn.

  o Minor features (controller):
    - Add a new __HashedControlSessionPassword option for controllers
      to use for one-off session password hashes that shouldn't
      get saved to disk by SAVECONF. Make Tor automatically convert
      "HashedControlPassword" to this new option but only when it's
      given on the command line. Partial fix for bug 586.

  o Minor features (logging):
    - When SafeLogging is disabled, log addresses along with all TLS
      errors.

  o Minor features (build):
    - When built with --enable-gcc-warnings, check for whether Apple's
      warning "-Wshorten-64-to-32" is enabled.

  o Minor features (misc):
    - Add a --passphrase-fd argument to tor-gencert command for
      scriptability.

  o Minor bugfixes:
    - Log the correct memory chunk sizes for empty RAM chunks in mempool.c.
    - Directory mirrors no longer include a guess at the client's IP